welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:8: error: value mac is not a member of object Math
		return Math.mac(a,b)
                            ^